# qt_learn-todo_list_app

./: CMakeLists.txt  main.cpp
